--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@types/node": "^20.10.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "csv": "^6.3.6",
+    "dotenv": "^16.3.1"
   }
 }
