--- a/tests/resources/.env.uat
+++ b/tests/resources/.env.uat
@@ -1,3 +1,3 @@
-username = 'ranjini.r@testleaf.com'
-password = 'Testleaf$1234'
-base_URL = 'https://login.salesforce.com'
+username = "ranjini.r@testleaf.com"
+password = "Testleaf$1234"
+base_URL = "https://login.salesforce.com"
