--- a/resources/.env.uat
+++ b/resources/.env.uat
@@ -1,3 +1,3 @@
 USERNAME="ranjini.r@testleaf.com"
 PASSWORD="Testleaf$1234"
-BASE_URL="https://login.salesforce.com"
+BASE_URL="https://www.google.com"
