--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": " npx playwright test",
-    "pretest": "cross-env test_env=uat npx playwright test"
+    "test": "npx playwright test",
+    "env:dev": "cross-env ENV=dev npx playwright test loginWithEnvVariables.spec.ts",
+    "env:uat": "cross-env ENV=uat npx playwright test loginWithEnvVariables.spec.ts"
   },
   "repository": {
     "type": "git",
